# huaweicloud-sdk-rust-obs

./: .env.example  Cargo.toml  README.md  README_zh-CN.md
examples/: get_object.rs  multipart_upload.rs  obs.rs  pub_object.rs  streaming_upload.rs
src/: auth.rs  bucket.rs  client.rs  config.rs  error.rs  lib.rs  object.rs  provider.rs  xml_utils.rs
src/model/: delete_object.rs  mod.rs  object.rs
src/model/bucket/: copy_object.rs  create_bucket.rs  list_bucket.rs  list_object.rs  location.rs  mod.rs
src/operations/: bucket.rs  mod.rs  object.rs
src/operations/multipart/: abort_multipart_upload.rs  complete_multipart_upload.rs  copy_part.rs  initiate_multipart_upload.rs  list_multipart_uploads.rs  list_parts.rs  mod.rs  upload_part.rs
src/operations/object/: append_object.rs  copy_object.rs  delete_object.rs  delete_objects.rs  get_object.rs  get_object_acl.rs  head_object.rs  mod.rs  put_object.rs  set_object_acl.rs
tests/: bucket.rs  client.rs  multipart.rs  object.rs
tests/common/: mod.rs
