[package]
name = "huaweicloud-sdk-rust-obs"
description = "Huawei Cloud OBS Rust SDK - AWS SDK style API"
authors = ["KingzCheung <kingzcheung@gmail.com>"]
version = "1.0.0"
edition = "2021"
readme = "README.md"
license-file = "LICENSE-APACHE-2.0"
homepage = "https://github.com/kingzcheung/huaweicloud-sdk-rust-obs"
repository = "https://github.com/kingzcheung/huaweicloud-sdk-rust-obs"
keywords = [
    "obs", "huaweicloud", "sdk", "object-storage", "aws-style"
]
categories = ["api-bindings", "web-programming"]

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
reqwest = { version = "0.13.1", features = ["json", "stream"] }
thiserror = "2.0.18"
urlencoding = "2.1.2"
chrono = "0.4.43"
hmac-sha1 = "0.2.2"
base64 = "0.22.1"
quick-xml = { version = "0.37.2", features = ["serialize"] }
bytes = "1.11.0"
serde = { version = "1.0.162", features = ["derive"] }
async-trait = "0.1.68"
lazy_static = "1.4.0"
md-5 = "0.10.5"
tracing = "0.1.41"
futures = "0.3.31"
pin-project-lite = "0.2.16"

[target.'cfg(unix)'.dependencies]
dotenvy = "0.15.7"

[dev-dependencies]
tokio-test = "0.4.4"
wiremock = "0.6.2"
